# docker-python-starter

./: Dockerfile  README.md  aerich.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/app/infrastructure/persistence/: initializers.py  models.py
