[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Dev"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
celery = "^5.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-django = "^4.4.0"
flake8 = "^3.9.2"
tox = "^3.24.0"
black = "^21.7b0"
pytest-mock = "^3.6.1"
coverage = "^5.5"
mypy = "^0.910"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
