[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dev"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.1.2"
aerich = "^0.5.5"
asyncpg = "^0.23.0"
fastapi = "^0.68.0"
tortoise-orm = "^0.17.6"
httpx = "^0.18.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
flake8 = "^3.9.2"
tox = "^3.24.0"
black = "^21.7b0"
coverage = "^5.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
